# course-creator-plugin

./: README.md  pyproject.toml
ai_course_creator/: MANIFEST.in  __init__.py  apps.py  settings.py  urls.py  views.py
ai_course_creator/core/: assessment_generator.py  content_generator.py  course_builder.py  course_generator.py
ai_course_creator/models/: course.py
ai_course_creator/settings/: __init__.py  common.py
ai_course_creator/static/js/: course-creator.js
ai_course_creator/static/js/ai_course_creator/: assessment.js  audience.js  component.js  documentupload.js  hero.js  state.js
ai_course_creator/static/scss/: course-creator.scss
ai_course_creator/templates/: course-creator.html
ai_course_creator/templates/ai_course_creator/: course-creator.html
ai_course_creator/utils/: json_parser.py
openedx_ai_course_creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tutor_openedx_ai_course_creator/: __init__.py  hooks.py  plugin.py
tutor_openedx_ai_course_creator/ai_course_creator/: apps.py  urls.py  views.py
tutor_openedx_ai_course_creator/ai_course_creator/core/: __init__.py
tutor_openedx_ai_course_creator/ai_course_creator/static/js/ai_course_creator/: duration.js  generation.js
