[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-openedx-ai-course-creator"
version = "0.1.0"
description = "AI Course Creator plugin for Open edX and Tutor"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "tutor>=20.0.0,<21.0.0",
    "Django>=3.2",
    "edx-django-utils",
    "google-generativeai",
    "pypdf",
    "requests",
    "httpx",
]

[project.entry-points."tutor.plugin.v1"]
openedx_ai_course_creator = "tutor_openedx_ai_course_creator.hooks"

[project.entry-points."lms.djangoapp"]
ai_course_creator = "ai_course_creator.apps:AiCourseCreatorConfig"

[project.entry-points."cms.djangoapp"]
ai_course_creator = "ai_course_creator.apps:AiCourseCreatorConfig"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_course_creator*", "tutor_openedx_ai_course_creator*"]

[tool.setuptools.package-data]
ai_course_creator = ["templates/**/*", "static/**/*"]